--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,8 @@
 		
     </head>
     
-    <body>        
+    <body>     
+    	<!-- MAIN PAGE -->
 		<div data-role="page" id="main-page" data-title="Meu primeiro app" data-position="fixed" data-theme="a">		
 			<div data-role="header" id="main-header" data-position="fixed" data-theme="b">
 				<a href="#menu" data-icon="bars" data-iconpos="notext">Menu</a>
@@ -104,16 +105,11 @@
 		<div data-role="page" id="prod-page" data-title="Produto" data-position="fixed" data-theme="a">		
 			<div data-role="header" id="prod-header" data-position="fixed" data-theme="b"></div>			
 			<div data-role="main" id="prod-main" class="ui-content">
-				<div id="imgs-prod">
-					<div class="swiper-container">
-					  <div class="swiper-wrapper">
-					      <!-- <div class="swiper-slide"><img src="http://localhost/nusoap/img/camisa2.jpg"></div>
-					      <div class="swiper-slide"><img src="http://localhost/nusoap/img/camisa2.jpg"></div>
-					      <div class="swiper-slide"><img src="http://localhost/nusoap/img/camisa2.jpg"></div> -->
-					  </div>
-				      <div class="swiper-pagination"></div>
-					</div>
+				<div id="owl-demo" class="owl-carousel owl-theme">
+					<!-- <div class="item"><img src="http://localhost/nusoap/img/camisa2.jpg" alt="Owl Image"></div>
+					<div class="item"><img src="http://localhost/nusoap/img/camisa3.jpg" alt="Owl Image"></div>	 -->
 				</div>
+
 				<div id="nome-prod">Marca - Nome do produto</div>
 				<div id="preco-prod"><span id="preco">R$ 89,90</span><span id="parcelamento"> até 2x de 45,90</span></div>
 				<p>Detalhes do produto</p>
@@ -134,10 +130,18 @@
 		<script type="text/javascript" charset="utf-8" src="js/config.js"></script>
 		<script type="text/javascript" charset="utf-8" src="js/functions.js"></script>
 
-			<!--  -->
+			<!-- SWIPER 
 			<script type="text/javascript" charset="utf-8" src="js/plugins/Swiper-master/dist/js/swiper.jquery.min.js"></script>
-			<link href="js/plugins/Swiper-master/dist/css/swiper.min.css" rel="stylesheet">
+			<link href="js/plugins/Swiper-master/dist/css/swiper.min.css" rel="stylesheet">-->
 
+			<!-- OWL CAROUSEL -->
+			<script type="text/javascript" charset="utf-8" src="js/plugins/owl-carousel/owl.carousel.min.js"></script>
+			<link href="js/plugins/owl-carousel/owl.carousel.css" rel="stylesheet">
+			<link href="js/plugins/owl-carousel/owl.theme.css" rel="stylesheet">
+			<link href="js/plugins/owl-carousel/owl.transitions.css" rel="stylesheet">
+
+
+		<!-- STYLES -->
 		<link href="css/default.css" rel="stylesheet">
 		<link href="css/media.css" rel="stylesheet">
 
@@ -202,13 +206,15 @@
 			lista_produto(localStorage.id_produto);
 
 			$(document).ready(function () {
-			    //initialize swiper when document ready  
-			    var mySwiper = new Swiper ('.swiper-container', {
-			      // Optional parameters
-			      	pagination: '.swiper-pagination',
-			        paginationClickable: true
-			    })        
-			  });			
+				$("#owl-demo").owlCarousel({
+					// navigation : true, // Show next and prev buttons
+					// slideSpeed : 300,
+					// paginationSpeed : 400,
+					// singleItem:true	
+					jsonPath : URL_SOA_IMGS_PRODUTO+localStorage.id_produto
+				});
+			});	
+
 		});	
 
 		$(document).on('pageshow','#prod-page' , function(){
